
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct al_serdes_grp_obj {int dummy; } ;


 int AL_SRDS_REG_PAGE_4_COMMON ;
 int AL_SRDS_REG_TYPE_PMA ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_MASK ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_REG_NUM ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_SHIFT ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_MASK ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_REG_NUM ;
 int SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_SHIFT ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_MASK ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_REG_NUM ;
 int SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_MASK ;
 int SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_MASK ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_MASK ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_COARSE_STEP_MASK ;
 int SERDES_IREG_FLD_RXEQ_COARSE_STEP_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_COARSE_STEP_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_MASK ;
 int SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_MASK ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_MASK ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_FINE_STEP_MASK ;
 int SERDES_IREG_FLD_RXEQ_FINE_STEP_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_FINE_STEP_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_MASK ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_SHIFT ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_MASK ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_REG_NUM ;
 int SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_SHIFT ;
 int al_serdes_grp_reg_masked_write (struct al_serdes_grp_obj*,int ,int ,int ,int ,int) ;

__attribute__((used)) static inline void al_serdes_common_cfg_eth(struct al_serdes_grp_obj *obj)
{
 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_REG_NUM,
    SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_MASK,
    (0x1 << SERDES_IREG_FLD_RXEQ_LOOKUP_CODE_EN_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_REG_NUM,
    SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_MASK,
    (0 << SERDES_IREG_FLD_RXEQ_LOOKUP_LASTCODE_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_REG_NUM,
    SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_MASK,
    (0x2 << SERDES_IREG_FLD_RXEQ_COARSE_RUN1_MASK_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_REG_NUM,
    SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_MASK,
    (0 << SERDES_IREG_FLD_RXEQ_COARSE_RUN2_MASK_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_COARSE_STEP_REG_NUM,
    SERDES_IREG_FLD_RXEQ_COARSE_STEP_MASK,
    (0x1 << SERDES_IREG_FLD_RXEQ_COARSE_STEP_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_REG_NUM,
    SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_MASK,
    (0x1 << SERDES_IREG_FLD_RXEQ_COARSE_ITER_NUM_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_REG_NUM,
    SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_MASK,
    (0xf0 << SERDES_IREG_FLD_RXEQ_FINE_RUN1_MASK_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_REG_NUM,
    SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_MASK,
    (0 << SERDES_IREG_FLD_RXEQ_FINE_RUN2_MASK_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_FINE_STEP_REG_NUM,
    SERDES_IREG_FLD_RXEQ_FINE_STEP_MASK,
    (1 << SERDES_IREG_FLD_RXEQ_FINE_STEP_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_REG_NUM,
    SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_MASK,
    (0x8 << SERDES_IREG_FLD_RXEQ_FINE_ITER_NUM_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_MASK,
    (0 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD1_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_MASK,
    (0x64 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_BERTHRESHOLD2_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_MASK,
    (0x3 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALCOARSE_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_MASK,
    (0x1 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_XVALFINE_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_MASK,
    (3 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALCOARSE_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_REG_NUM,
    SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_MASK,
    (1 << SERDES_IREG_FLD_RXCALEYEDIAGFSM_YVALFINE_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_REG_NUM,
    SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_MASK,
    (0xc << SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_MSB_SHIFT));

 al_serdes_grp_reg_masked_write(
    obj,
    AL_SRDS_REG_PAGE_4_COMMON,
    AL_SRDS_REG_TYPE_PMA,
    SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_REG_NUM,
    SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_MASK,
    (0xcc << SERDES_IREG_FLD_EYE_DIAG_SAMPLE_CNT_LSB_SHIFT));
}
